<?xml version="1.0"?>
<project
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd"
	xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
	<modelVersion>4.0.0</modelVersion>
	<groupId>ru.r2cloud</groupId>
	<artifactId>r2cloud</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<name>Decode satellite signals on Raspberry PI</name>
	<description>This is a server-side component automatically recording satellite signals</description>
	<inceptionYear>2014</inceptionYear>
	<organization>
		<name>r2cloud</name>
	</organization>

	<developers>
		<developer>
			<email>info@r2cloud.ru</email>
			<name>Andrey Rodionov</name>
		</developer>
	</developers>

	<repositories>
		<repository>
			<id>jcenter</id>
			<url>https://jcenter.bintray.com/</url>
		</repository>
	</repositories>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<sigar.version>1.6.4</sigar.version>
		<sigar.download.url>https://storage.googleapis.com/google-code-archive-downloads/v2/code.google.com/magelan/hyperic-sigar-${sigar.version}.zip</sigar.download.url>
		<sigar.SHA1>8f79d4039ca3ec6c88039d5897a80a268213e6b7</sigar.SHA1>
		<sigar.download.path>${settings.localRepository}/org/fusesource/sigar/${sigar.version}</sigar.download.path>
	</properties>

	<distributionManagement>
		<repository>
			<id>maven-s3-release-repo</id>
			<name>AWS Release Repository</name>
			<url>s3://r2cloud</url>
		</repository>
	</distributionManagement>

	<dependencies>
		<dependency>
			<groupId>ru.r2cloud</groupId>
			<artifactId>jradio</artifactId>
			<version>1.13</version>
		</dependency>
		<dependency>
			<groupId>uk.me.g4dpz</groupId>
			<artifactId>predict4java</artifactId>
			<version>1.1.3</version>
			<exclusions>
				<exclusion>
					<artifactId>commons-logging</artifactId>
					<groupId>commons-logging</groupId>
				</exclusion>
			</exclusions>
		</dependency>
		<dependency>
			<groupId>org.shredzone.acme4j</groupId>
			<artifactId>acme4j-client</artifactId>
			<version>0.12</version>
		</dependency>
		<dependency>
			<groupId>org.shredzone.acme4j</groupId>
			<artifactId>acme4j-utils</artifactId>
			<version>1.1</version>
		</dependency>
		<dependency>
			<groupId>org.fusesource</groupId>
			<artifactId>sigar</artifactId>
			<version>${sigar.version}</version>
			<exclusions>
				<exclusion>
					<groupId>log4j</groupId>
					<artifactId>log4j</artifactId>
				</exclusion>
			</exclusions>
		</dependency>

		<dependency>
			<groupId>io.dropwizard.metrics</groupId>
			<artifactId>metrics-core</artifactId>
			<version>3.2.3</version>
		</dependency>
		<dependency>
			<groupId>io.dropwizard.metrics</groupId>
			<artifactId>metrics-healthchecks</artifactId>
			<version>3.2.3</version>
		</dependency>
		<dependency>
			<groupId>org.nanohttpd</groupId>
			<artifactId>nanohttpd</artifactId>
			<version>2.3.1</version>
		</dependency>
		<dependency>
			<groupId>org.opensky-network</groupId>
			<artifactId>libadsb</artifactId>
			<version>2.1.1</version>
		</dependency>
		<dependency>
			<groupId>com.eclipsesource.minimal-json</groupId>
			<artifactId>minimal-json</artifactId>
			<version>0.9.4</version>
		</dependency>
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-jdk14</artifactId>
			<version>1.7.12</version>
		</dependency>
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>jcl-over-slf4j</artifactId>
			<version>1.7.12</version>
		</dependency>
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-api</artifactId>
			<version>1.7.12</version>
		</dependency>
		<dependency>
			<groupId>com.aerse</groupId>
			<artifactId>rrd4j-light</artifactId>
			<version>3.8</version>
		</dependency>
		<dependency>
			<groupId>commons-cli</groupId>
			<artifactId>commons-cli</artifactId>
			<version>1.2</version>
		</dependency>
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.10</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.mockito</groupId>
			<artifactId>mockito-core</artifactId>
			<version>2.23.4</version>
			<scope>test</scope>
		</dependency>
	</dependencies>
	<build>
		<extensions>
			<extension>
				<groupId>org.springframework.build</groupId>
				<artifactId>aws-maven</artifactId>
				<version>5.0.0.RELEASE</version>
			</extension>
		</extensions>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-antrun-plugin</artifactId>
				<version>1.6</version>
				<executions>
					<execution>
						<id>prepare</id>
						<phase>validate</phase>
						<configuration>
							<target>
								<echo message="Downloading sigar native binaries..." />
								<get src="${sigar.download.url}"
									dest="${sigar.download.path}/" skipExisting="true" />
								<checksum
									file="${sigar.download.path}/hyperic-sigar-${sigar.version}.zip"
									algorithm="SHA1" property="${sigar.SHA1}"
									verifyProperty="validChecksum" />
								<fail
									message="Checksum validation failed for hyperic-sigar-${sigar.version}.zip">
									<condition>
										<isfalse value="${validChecksum}" />
									</condition>
								</fail>
								<unzip
									src="${sigar.download.path}/hyperic-sigar-${sigar.version}.zip"
									dest="${project.build.directory}/sigar-lib">
									<patternset>
										<include name="**/lib/libsigar-*" />
										<include name="**/lib/sigar-*" />
									</patternset>
									<mapper type="flatten" />
								</unzip>
							</target>
						</configuration>
						<goals>
							<goal>run</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>com.aerse.maven</groupId>
				<artifactId>apt-maven-plugin</artifactId>
				<version>1.11</version>
				<executions>
					<execution>
						<id>deploy</id>
						<goals>
							<goal>deploy</goal>
						</goals>
					</execution>
				</executions>
				<configuration>
					<component>main</component>
					<codename>r2cloud</codename>
					<sign>true</sign>
					<keyname>A5A70917</keyname>
					<passphraseServerId>r2cloud</passphraseServerId>
				</configuration>
			</plugin>
			<plugin>
				<artifactId>maven-deploy-plugin</artifactId>
				<version>2.7</version>
				<configuration>
					<skip>true</skip>
				</configuration>
			</plugin>
			<plugin>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.8.0</version>
				<configuration>
					<release>11</release>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-failsafe-plugin</artifactId>
				<version>2.20.1</version>
				<configuration>
					<skipITs>true</skipITs>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-jar-plugin</artifactId>
				<version>3.0.2</version>
				<executions>
					<execution>
						<goals>
							<goal>test-jar</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>cobertura-maven-plugin</artifactId>
				<version>2.7</version>
				<configuration>
					<formats>
						<format>html</format>
						<format>xml</format>
					</formats>
					<check />
				</configuration>
			</plugin>
			<plugin>
				<groupId>com.aerse.maven</groupId>
				<artifactId>deps-maven-plugin</artifactId>
				<version>1.1</version>
				<executions>
					<execution>
						<id>deps</id>
						<phase>package</phase>
						<goals>
							<goal>extract</goal>
						</goals>
						<configuration>
							<repositories>${project.build.directory}/deps/repositories.txt</repositories>
							<dependencies>${project.build.directory}/deps/dependencies.txt</dependencies>
							<script>${project.build.directory}/deps/download.sh</script>
						</configuration>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-assembly-plugin</artifactId>
				<version>3.0.0</version>
				<executions>
					<execution>
						<id>package-deb</id>
						<phase>package</phase>
						<goals>
							<goal>single</goal>
						</goals>
						<configuration>
							<appendAssemblyId>false</appendAssemblyId>
							<outputDirectory>${project.build.directory}</outputDirectory>
							<finalName>assembly-lib</finalName>
							<attach>false</attach>
							<descriptors>
								<descriptor>${basedir}/src/main/assembly/assembly.xml</descriptor>
							</descriptors>
						</configuration>
					</execution>
					<execution>
						<id>package-it-tests</id>
						<phase>package</phase>
						<goals>
							<goal>single</goal>
						</goals>
						<configuration>
							<appendAssemblyId>false</appendAssemblyId>
							<outputDirectory>${project.build.directory}</outputDirectory>
							<finalName>it-tests</finalName>
							<attach>false</attach>
							<descriptors>
								<descriptor>${basedir}/src/main/assembly/assembly-tests.xml</descriptor>
							</descriptors>
						</configuration>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-install-plugin</artifactId>
				<version>2.5.2</version>
				<configuration>
					<skip>true</skip>
				</configuration>
			</plugin>
			<plugin>
				<groupId>com.aerse.maven</groupId>
				<artifactId>deb-maven-plugin</artifactId>
				<version>1.6</version>
				<executions>
					<execution>
						<id>package</id>
						<phase>package</phase>
						<goals>
							<goal>package</goal>
						</goals>
					</execution>
				</executions>
				<configuration>
					<unixUserId>pi</unixUserId>
					<unixGroupId>pi</unixGroupId>
					<arch>armhf</arch>
					<section>embedded</section>
					<osDependencies>
						<r2cloud-ui>>=1513613469</r2cloud-ui>
						<r2cloud-jdk>>=20190305232021</r2cloud-jdk>
						<nginx-light>>=1.10.3</nginx-light>
						<dump1090-mutability>>=1.15~dev</dump1090-mutability>
						<libhyperic-sigar-java>>=1.6.4</libhyperic-sigar-java>
						<rtl-sdr>>=0.6git</rtl-sdr>
						<!-- required for stdbuf to force stderr flushing -->
						<coreutils>>=8.26</coreutils>
						<wxtoimg>>=2.11.2</wxtoimg>
						<!-- required by wxtoimg -->
						<libxft2>>=2.3.2</libxft2>
						<sox>>=14.4.1</sox>
						<!-- required by deps-maven-plugin -->
						<wget />
					</osDependencies>
					<javaServiceWrapper>false</javaServiceWrapper>
					<fileSets>
						<fileSet>
							<source>${basedir}/src/main/deb</source>
							<target>/</target>
						</fileSet>
						<fileSet>
							<source>${project.build.directory}/assembly-lib/lib</source>
							<target>lib</target>
						</fileSet>
						<fileSet>
							<source>${project.build.directory}/deps</source>
							<target>lib</target>
						</fileSet>
						<fileSet>
							<source>${project.build.directory}/assembly-lib/etc</source>
							<target>etc</target>
						</fileSet>
					</fileSets>
				</configuration>
			</plugin>
		</plugins>
	</build>

	<scm>
		<url>https://github.com/dernasherbrezon/r2cloud</url>
		<connection>scm:git:git@github.com/dernasherbrezon/r2cloud.git</connection>
		<developerConnection>scm:git:https://github.com/dernasherbrezon/r2cloud.git</developerConnection>
		<tag>HEAD</tag>
	</scm>
	
	<licenses>
		<license>
			<name>Apache-2.0</name>
			<url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
		</license>
	</licenses>

</project>
